# Multimodal-2025

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  clip_embeddings.py  datasetLoader.py  example_generate_embeddings.py  finetune.ipynb  generate_embeddings.py  generate_embeddings_clip.py  generate_embeddings_cloob.py  main.py  metrics.ipynb  metrics_2.ipynb  metrics_testing.ipynb  pyproject.toml  requirements.txt  test_vclipLoss.py  test_vclip_distributions.py  test_vclip_vmf_quick.py  test_vmf_distribution.py  try_push.sh
AlignCLIP/align_clip/: factory.py  zero_shot_metadata.py
Datasets/: cc12m.py  coco.py  cood.py  download_coco.sh  download_from_google.py  laion.py  preProcess.py
Models/: alignClipModel.py  clip.py  clipCaptionModel.py  clipInterface.py  clipLoss.py  clipModel.py  cloobLoss.py  cloobModel.py  llamaCaptioner  vClipModel.py  variationalClip.py  variational_clip.py
Notebooks/: AlignCLIP.ipynb  finetune.ipynb  metrics vclip.ipynb  metrics.ipynb  train.ipynb  trainer-ablations.ipynb  trainer.ipynb
distribution_training_comparisons/: test_distributions.py  test_vclipLoss.py
gmm_fit/: gmm_fit.py
losses/: alignCLIPLoss.py  alignClipLoss.py  clipLoss.py  cloobLoss.py  vclipLoss.py
metrics/: captioning.py  entropy.py  linearSeparability.py  metric.py  topk.py
papers-1-and-2/: README.md  cardelph_projection.py  clip_embeddings.py  em_algorithm.py  example.py  example_generate_embeddings.py  main.py  test_implementation.py  visualization.py  von_mises_fisher.py
sample_embeddings/: generate_embeddings_cloob.py
(+25 files in other folders)
